--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     <div class="grid">
 
       <div class="card">
-        <img src="images/parthx-gig1.png" alt="Project 1">
+        <img src="parthx-gig1.png" alt="Project 1">
         <div class="info">
           <h2>ParthX Gig Project</h2>
           <p>Creative gig design showcasing innovative solutions.</p>
@@ -26,7 +26,7 @@
       </div>
 
       <div class="card">
-        <img src="images/website.png" alt="Website Project">
+        <img src="website.png" alt="Website Project">
         <div class="info">
           <h2>Modern Website Design</h2>
           <p>Responsive web design for a corporate business site.</p>
@@ -34,7 +34,7 @@
       </div>
 
       <div class="card">
-        <img src="images/attorny-website.png" alt="Attorney Website">
+        <img src="attorny-website.png" alt="Attorney Website">
         <div class="info">
           <h2>Attorney Website</h2>
           <p>Professional law firm website with user-friendly navigation.</p>
@@ -42,7 +42,7 @@
       </div>
 
       <div class="card">
-        <img src="images/ecommerce-website.png" alt="Ecommerce Website">
+        <img src="ecommerce-website.png" alt="Ecommerce Website">
         <div class="info">
           <h2>E-commerce Website</h2>
           <p>Fully functional e-commerce store for online shopping.</p>
@@ -50,7 +50,7 @@
       </div>
 
       <div class="card">
-        <img src="images/vehicle-web.png" alt="Vehicle Website">
+        <img src="vehicle-web.png" alt="Vehicle Website">
         <div class="info">
           <h2>Vehicle Showroom</h2>
           <p>Dynamic car dealership website with gallery features.</p>
@@ -58,7 +58,7 @@
       </div>
 
       <div class="card">
-        <img src="images/IT-web.png" alt="IT Website">
+        <img src="IT-web.png" alt="IT Website">
         <div class="info">
           <h2>IT Service Website</h2>
           <p>Modern IT services website for tech solutions company.</p>
@@ -66,7 +66,7 @@
       </div>
 
       <div class="card">
-        <img src="images/jeweelary.png" alt="Jewelry Website">
+        <img src="jeweelary.png" alt="Jewelry Website">
         <div class="info">
           <h2>Jewelry E-Shop</h2>
           <p>Elegant jewelry store design with smooth user experience.</p>
@@ -74,7 +74,7 @@
       </div>
 
       <div class="card">
-        <img src="images/cms-admin.png" alt="CMS Admin Panel">
+        <img src="cms-admin.png" alt="CMS Admin Panel">
         <div class="info">
           <h2>CMS Admin Panel</h2>
           <p>Custom content management system dashboard UI design.</p>
